crates/chat/tests/snapshots/chrome__working_surface_swaps_the_brand_for_spinner_and_timer.snap
---
source: crates/chat/tests/chrome.rs
expression: "rows.join(\"\\n\")"
---

╭─── omp v0.1.0 ───────────────────────────────────────────────────────────────────────────────────╮
│                          │ Tips                                                                  │
│      Welcome back!       │ # for prompt actions                                                  │
│                          │ / for commands                                                        │
│       ████████████       │ ! to run bash                                                         │
│          ██  ██          │ $ to run python                                                       │
│          ██  ██          │ ───────────────────────────────────────────────────────────────────── │
│          ▒▒  ██          │ LSP Servers                                                           │
│              ██          │ No LSP servers                                                        │
│                          │                                                                       │
│      Claude Fable 5      │                                                                       │
│        anthropic         │                                                                       │
│                          │ ───────────────────────────────────────────────────────────────────── │
│                          │ Recent sessions                                                       │
│                          │ No recent sessions                                                    │
│                          │                                                                       │
│                          │                                                                       │
│                          │                                                                       │
│                          │                                                                       │
╰──────────────────────────┴───────────────────────────────────────────────────────────────────────╯
 Tip: Need a cheap nested model call? Use `completion(x...)`. Have a big batch of tasks? Ask clanker
      to use it!


 hello world



 ⠋ 0s  > ⬢ Fable 5 > 📁 omp > ⑂ main ▶─0%────────────────────────────────────────────────────────────┃───────────────1M─
╰─ Ask anything, edit files, run tools
